--- a/hotel.html
+++ b/hotel.html
@@ -5,21 +5,21 @@
 	<title>Hotel</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/min-style.css">
 </head>
 <body>
 	<!---------------------- HEADER -----------------------	-->
 	<div class="box-shadow">
 	<header class="main-header">
 		<nav class="main-navigation">
-			<a href="index.html" class="index-logo">
+			<a href="index.html" class="index-logo" aria-label="Логотип сайта">
 				<img src="img/sedona-logo.svg" width="140" height="72" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
-				<li><a href="#">Информация</a></li>
-				<li><a href="#">Фото и видео</a></li>
-				<li><a href="#">Карта штата</a></li>
-				<li class="current-page"><a href="#">Гостиницы</a></li>
+				<li><a href="#" aria-label="информация">Информация</a></li>
+				<li><a href="#" aria-label="фото и видео">Фото и видео</a></li>
+				<li><a href="#" aria-label="карта штата">Карта штата</a></li>
+				<li class="current-page"><a href="#" aria-label="гостиницы">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -32,7 +32,7 @@
 					<fieldset>
 						<legend>Инфраструктура:</legend>
 						<ul class="selection-list-1">
-							<li><input type="checkbox" id="pool" name="pool" checked class="visually-hidden" >	
+							<li><input type="checkbox" id="pool" name="pool" checked class="visually-hidden" aria-label="чекбокс бассейн">	
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -43,7 +43,7 @@
 								<label for="pool">
 								Бассейн</label>
 							</li>
-							<li><input type="checkbox" id="parking" name="parking" class="visually-hidden" >
+							<li><input type="checkbox" id="parking" name="parking" class="visually-hidden" aria-label="чекбокс парковка">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -52,7 +52,7 @@
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
 								<label for="parking">Парковка</label></li>
-							<li><input type="checkbox" id="wifi" name="wifi" class="visually-hidden">
+							<li><input type="checkbox" id="wifi" name="wifi" class="visually-hidden" aria-label="чекбокс вайфай">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -66,7 +66,7 @@
 					<fieldset>
 						<legend>Тип жилья:</legend>
 						<ul class="selection-list-2">
-							<li><input type="checkbox" id="hostel" name="hostel" checked class="visually-hidden" disabled>
+							<li><input type="checkbox" id="hostel" name="hostel" checked class="visually-hidden" disabled aria-label="чекбокс гостиница">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -75,7 +75,7 @@
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
 								<label for="hostel">Гостиница</label></li>
-							<li><input type="checkbox" id="motel" name="motel" checked class="visually-hidden">
+							<li><input type="checkbox" id="motel" name="motel" checked class="visually-hidden" aria-label="чекбокс мотель">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -84,7 +84,7 @@
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
 								<label for="motel">Мотель</label></li>
-							<li><input type="checkbox" id="apartments" name="apartments" checked class="visually-hidden">
+							<li><input type="checkbox" id="apartments" name="apartments" checked class="visually-hidden" aria-label="чекбокс апартаменты">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
 								</svg>
@@ -99,8 +99,8 @@
 				<div class="filter-range">
 					<div class="filter-range-title">Стоимость в сутки (Р):</div>
 					<div class="price-controls">
-						<label class="min-price">от <input type="text" name="min-price" value="0"></label>
-        				<label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+						<label class="min-price">от <input type="text" name="min-price" value="0" aria-label="стоимость в сутки от"></label>
+        				<label class="max-price">до <input type="text" name="max-price" value="3000" aria-label="стоимость в сутки до"></label>
 					</div>
 					<div class="range-controls">
 						<div class="scale">
@@ -109,7 +109,7 @@
 				        <div class="range-toggle range-toggle-min"></div>
         				<div class="range-toggle range-toggle-max"></div>
 					</div>
-					<button type="submit" class="button-show">Показать</button>
+					<button type="submit" class="button-show" aria-label="кнопка показать">Показать</button>
 				</div>
 			</form>
 		</section>
@@ -118,26 +118,26 @@
 			<h2>Найдено: 3</h2>
 			<ul class="found-list">
 				<li>Сортировка:</li>
-				<li><a href="#" class="current-item">По цене</a></li>
-				<li><a href="#">По типу</a></li>
-				<li><a href="#">По рейтингу</a></li>
+				<li><a href="#" class="current-item" aria-label="сортировка по цене">По цене</a></li>
+				<li><a href="#" aria-label="сортировка по типу">По типу</a></li>
+				<li><a href="#" aria-label="сортировка по рейтингу">По рейтингу</a></li>
 			</ul>
 			<div class="arrows">
-				<a href="#" title="по возрастанию"></a>
-				<a href="#" title="по убыванию"></a>
+				<a href="#" title="по возрастанию" aria-label="по возрастанию"></a>
+				<a href="#" title="по убыванию" aria-label="по убыванию"></a>
 			</div>
 		</section>
 		<!-------------------------- СПИСОК НАЙДЕНО -------------------------->
 		<section class="found-item">
 			<img src="img/amara.jpg" width="135" height="90" alt="amara resort and spa">
 			<div class="found-item-info">
-				<a href="#"><h2>Amara resort & spa</h2></a>
+				<a href="#" aria-label="Amara resort & spa"><h2>Amara resort & spa</h2></a>
 				<div>
 					<p>гостиница</p>
 					<p>от 4000 Р.</p>	
 				</div>
-				<a href="#" class="button-more">Подробнее</a>
-				<a href="#" class="button-booking">Забронировать</a>	
+				<a href="#" class="button-more" aria-label="кнопка подробнее">Подробнее</a>
+				<a href="#" class="button-booking" aria-label="кнопка забронировать">Забронировать</a>	
 			</div>
 			<div class="mark-div">
 				<ul class="mark-list" aria-label="4 звезды">
@@ -146,20 +146,20 @@
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark" aria-label="Рейтинг 8.5">Рейтинг: 8.5</p>
+				<p class="mark">Рейтинг: 8.5</p>
 			</div>
 		</section>
 
 		<section class="found-item">
 			<img src="img/desert.jpg"  width="135" height="90" alt="desert quail inn">
 			<div class="found-item-info">
-				<a href="#"><h2>Desert quail inn</h2></a>
+				<a href="#" aria-label="Desert quail inn"><h2>Desert quail inn</h2></a>
 				<div>
 					<p>Мотель</p>
 					<p>от 3000 Р.</p>
 				</div>
-				<a href="#" class="button-more">Подробнее</a>
-				<a href="#" class="button-booking">Забронировать</a>
+				<a href="#" class="button-more" aria-label="кнопка подробнее">Подробнее</a>
+				<a href="#" class="button-booking" aria-label="кнопка забронировать">Забронировать</a>
 			</div>
 			<div class="mark-div">
 				<ul class="mark-list" aria-label="3 звезды">
@@ -167,27 +167,27 @@
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark" aria-label="Рейтинг 8.9">Рейтинг: 8.9</p>
+				<p class="mark">Рейтинг: 8.9</p>
 			</div>
 		</section>
 
 		<section class="found-item">
 			<img src="img/villas.jpg"  width="135" height="90" alt="villas at poco diablo">
 			<div class="found-item-info">
-				<a href="#"><h2>Villas at poco diablo</h2></a>
+				<a href="#" aria-label="Villas at poco diablo"><h2>Villas at poco diablo</h2></a>
 				<div>
 					<p>Апартаменты</p>
 					<p>от 2000 Р.</p>
 				</div>
-				<a href="#" class="button-more">Подробнее</a>
-				<a href="#" class="button-booking">Забронировать</a>
+				<a href="#" class="button-more" aria-label="кнопка подробнее">Подробнее</a>
+				<a href="#" class="button-booking" aria-label="кнопка забронировать">Забронировать</a>
 			</div>
 			<div class="mark-div">
 				<ul class="mark-list" aria-label="2 звезды">
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark" aria-label="Рейтинг 9.2">Рейтинг: 9.2</p>
+				<p class="mark">Рейтинг: 9.2</p>
 			</div>	
 		</section>
 	</main>
@@ -196,17 +196,17 @@
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
 			<ul class="social-list">
-				<li class="social-item"><a href="#">
+				<li class="social-item"><a href="#" aria-label="ссылка на twitter">
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
 						<path id="twitter-svg" fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
 					</svg>
 				</a></li>
-				<li class="social-item"><a href="#">
+				<li class="social-item"><a href="#" aria-label="ссылка на facebook">
 					<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
 						<path id="fb-svg" fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
 					</svg>
 				</a></li>
-				<li class="social-item"><a href="#">
+				<li class="social-item"><a href="#" aria-label="ссылка на youtube">
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
 						<path id="youtube-svg" fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
 					</svg>
@@ -215,7 +215,7 @@
 		</div>
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
-			<a href="https://htmlacademy.ru/" class="copyright-img">
+			<a href="https://htmlacademy.ru/" aria-label="ссылка на сайт html academy">
 				<svg id="Layer_1" 
 				data-name="Layer 1" 
 				xmlns="http://www.w3.org/2000/svg" 
