--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 		<section class="slider">
 			<div class="polygone"></div>
 		</section>
-
 		<div class="main-title">
-			<h2>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+			<div>
+				<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>	
+			</div>
 			<p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>	
 		</div>
 		<!-------------------------- НАСТОЯЩИЙ ГОРОДОК -------------------------->
@@ -38,9 +39,14 @@
 			<div class="real-city-info">
 				<ul class="real-city-list">
 					<li class="real-city-item">
-						<h2>Настоящий<br> городок</h2>
+						<div>
+							<h2>Настоящий городок</h2>	
+						</div>
 						<p class="number">— №1 —</p>
-						<p>Седона — не аттракцион для туристов,<br> там течёт своя жизнь</p>
+						<div>
+							<p class="real-city-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>	
+						</div>
+						
 					</li>
 				</ul>
 			</div>
@@ -48,7 +54,6 @@
 				<img src="img/city.jpg" width="800" height="256" alt="Настоящий городок">
 			</div>
 		</section>
-
 		<section class="features">
 			<ul class="features-list">
 				<li class="features-item">
@@ -56,21 +61,27 @@
 						<img src="img/house.svg" width="75" height="72" alt="Жильё">
 					</div>
 					<h2>Жильё</h2>
-					<p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+					<div>
+						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>	
+					</div>
 				</li>
 				<li class="features-item">
 					<div>
 						<img src="img/food.svg" width="74" height="70" alt="Еда">	
 					</div>
 					<h2>Еда</h2>
-					<p>Всегда заказывайте фирменный бургер,<br> вы не разочеруетесь!</p>
+					<div>
+						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>	
+					</div>
 				</li>
 				<li class="features-item">
 					<div>
 						<img src="img/presents.svg" width="64" height="76" alt="Сувениры">	
 					</div>
 					<h2>Сувениры</h2>
-					<p>Не только китайского, но и местного<br> производства!</p>
+					<div>
+						<p>Не только китайского, но и местного производства!</p>	
+					</div>
 				</li>
 			</ul>
 		</section>
@@ -83,60 +94,71 @@
 				<ul class="bridge-list">
 					<li class="bridge-item">
 						<h2>Там есть<br> мост дьявола</h2>
-						<p class="number">— №1 —</p>
-						<p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
+						<p class="number">— №2 —</p>
+						<div>
+							<p class="bridge-item-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>	
+						</div>
 					</li>
 				</ul>
 			</div>
 		</section>
-	
 		<section class="mini-info">
 			<ul class="mini-info-list">
 				<li class="mini-info-item">
-					<h2>Небольшая<br> площадь</h2>
+					<div>
+						<h2>Небольшая площадь</h2>	
+					</div>
 					<p class="number">— №3 —</p>
-					<p>Все достопримечательности<br> находятся очень близко</p>
+					<div>
+						<p class="mini-info-item-text">Все достопримечательности находятся очень близко</p>	
+					</div>
 				</li>
 				<li class="mini-info-item">
-					<h2>Красивая<br> дорога</h2>
+					<div>
+						<h2>Красивая дорога</h2>	
+					</div>
 					<p class="number">— №4 —</p>
-					<p>Ехать в седону из лас-вегаса совсем<br> не скучно!</p>
+					<div>
+						<p class="mini-info-item-text">Ехать в седону из лас-вегаса совсем не скучно!</p>	
+					</div>
 				</li>
-
 				<li class="mini-info-item">
-					<h2>Мало<br> туристов</h2>
+					<div>
+						<h2>Мало туристов</h2>	
+					</div>
 					<p class="number">— №5 —</p>
-					<p>Большинство едет в гранд канбон<br> и толпится там</p>
+					<div>
+						<p class="mini-info-item-text">Большинство едет в гранд канбон и толпится там</p>	
+					</div>
 				</li>
 			</ul>
 		</section>
 	<div class="interested">
 		<h2>Заинтересовались?</h2>
 		<p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
-		<div class="btn-close-none"></div>
+		<div class="btn-close-none btn-close-block"></div>
 		<a href="#" class="search-hostel-btn" aria-label="кнопка поиска гостиницы в седоне"><h2>Поиск гостиницы в седоне</h2></a>
-
 		<!-------------------------- ФОРМА ПОИСКА ГОСТИНИЦЫ -------------------------->
-			<form action="https://echo.htmlacademy.ru/" method="post" class="opacity-zero search-hostel">
+			<form action="https://echo.htmlacademy.ru/" method="post" class="opacity-zero search-hostel visually-show">
 				<div class="arrival">
 					<label for="arrival" class="arrival-label">Дата заезда:</label>
 					<input type="text" id="arrival" name="arrival" value="24 апреля 2017">
-					<label for="arrival">
+					<button type=button class="svg-button btn-arrival" aria-label="выбор даты заезда">
 						<svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
 						<path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
 						<path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
 						</svg>
-					</label>
+					</button>
 				</div>
 				<div class="departure">
 					<label for="departure" class="departure-label">Дата выезда:</label>
 					<input type="text" id="departure" name="departure" value="4 июля 2017">
-					<label for="departure">
+					<button type="button" class="svg-button btn-departure" aria-label="выбор даты выезда">
 						<svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
 						<path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
 						<path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
 						</svg>
-					</label>
+					</button>
 				</div>
 				<div class="adults-children">
 					<div class="adults">
@@ -158,7 +180,6 @@
 				</div>
 				<button type="submit" class="button-search">НАЙТИ</button>
 			</form>	
-
 		<section class="map">
 			<div class="map-image"></div>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d610558.8090763807!2d-112.39114221154944!3d34.785990603427194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1551433698834" width="1200" height="597" style="border:0" allowfullscreen></iframe>
@@ -204,7 +225,6 @@
 		</div>
 	</footer>
 	</div>
-
 	<script src="js/min-scripts.js"></script>
 </body>
 </html>
