--- a/hotel.html
+++ b/hotel.html
@@ -51,7 +51,8 @@
 									<path fill="#FFFFFF" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
-								<label for="parking">Парковка</label></li>
+								<label for="parking">Парковка</label>
+							</li>
 							<li><input type="checkbox" id="wifi" name="wifi" class="visually-hidden" aria-label="чекбокс вайфай">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -60,7 +61,8 @@
 									<path fill="#FFFFFF" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
-								<label for="wifi">Wi-Fi</label></li>
+								<label for="wifi">Wi-Fi</label>
+							</li>
 						</ul>
 					</fieldset>
 					<fieldset>
@@ -74,7 +76,8 @@
 									<path class="cb-on-path" fill="#FFFFFF" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
 									<path class="cb-on-path" fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
-								<label for="hostel">Гостиница</label></li>
+								<label for="hostel">Гостиница</label>
+							</li>
 							<li><input type="checkbox" id="motel" name="motel" checked class="visually-hidden" aria-label="чекбокс мотель">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -83,7 +86,8 @@
 									<path fill="#FFFFFF" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
-								<label for="motel">Мотель</label></li>
+								<label for="motel">Мотель</label>
+							</li>
 							<li><input type="checkbox" id="apartments" name="apartments" checked class="visually-hidden" aria-label="чекбокс апартаменты">
 								<svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" class="cb-off">
 									<path fill="#FFFFFF" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -92,7 +96,8 @@
 									<path fill="#FFFFFF" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
 									<path fill="#FFFFFF" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
 								</svg>
-								<label for="apartments">Апартаменты</label></li>
+								<label for="apartments">Апартаменты</label>
+							</li>
 						</ul>
 					</fieldset>
 				</div>
@@ -113,7 +118,6 @@
 				</div>
 			</form>
 		</section>
-		
 		<section class="found">
 			<h2>Найдено: 3</h2>
 			<ul class="found-list">
@@ -129,7 +133,9 @@
 		</section>
 		<!-------------------------- СПИСОК НАЙДЕНО -------------------------->
 		<section class="found-item">
-			<img src="img/amara.jpg" width="135" height="90" alt="amara resort and spa">
+			<div class="found-item-img fi-img-001">
+				<img src="img/amara.jpg" width="135" height="90" alt="amara resort and spa">
+			</div>
 			<div class="found-item-info">
 				<a href="#" class="found-item-link" aria-label="Amara resort & spa"><h2>Amara resort & spa</h2></a>
 				<div class="found-item-info-text">
@@ -149,9 +155,10 @@
 				<p class="mark">Рейтинг: 8.5</p>
 			</div>
 		</section>
-
 		<section class="found-item">
-			<img src="img/desert.jpg"  width="135" height="90" alt="desert quail inn">
+			<div class="found-item-img fi-img-002">
+				<img src="img/desert.jpg"  width="135" height="90" alt="desert quail inn">	
+			</div>
 			<div class="found-item-info">
 				<a href="#" class="found-item-link" aria-label="Desert quail inn"><h2>Desert quail inn</h2></a>
 				<div class="found-item-info-text">
@@ -170,9 +177,10 @@
 				<p class="mark">Рейтинг: 8.9</p>
 			</div>
 		</section>
-
 		<section class="found-item">
-			<img src="img/villas.jpg"  width="135" height="90" alt="villas at poco diablo">
+			<div class="found-item-img fi-img-003">
+				<img src="img/villas.jpg"  width="135" height="90" alt="villas at poco diablo">	
+			</div>
 			<div class="found-item-info">
 				<a href="#" class="found-item-link" aria-label="Villas at poco diablo"><h2>Villas at poco diablo</h2></a>
 				<div class="found-item-info-text">
